# srcms

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
.github/workflows/: check.yml  test.yml
client/: cargo.toml
data/: cargo.toml
data/src/: lib.rs
macros/: cargo.toml
migrations/: 20231124071918_server_init.down.sql  20231124071918_server_init.up.sql
server/: cargo.toml
server/src/: main.rs  server_init.sql
srcms-client/: Cargo.toml
srcms-data/: Cargo.toml
srcms-data/src/: lib.rs  users.rs
srcms-data/src/tables/: users.rs
srcms-macros/: Cargo.toml
srcms-schema-sqlx/: Cargo.toml
srcms-schema-sqlx/src/: common.rs  lib.rs  users.rs
srcms-server/: Cargo.toml
srcms-server/migrations/server_init/: down.sql  up.sql
srcms-server/src/: main.rs  server_init.sql
