[package]
name = "srcms-data"
version = "0.1.0"
edition = "2021"

[dependencies]

srcms-macros = { path = "../srcms-macros" }

serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

[dependencies.chrono]
version = "0.4"
features = [
    "serde",
]

[dependencies.uuid]
version = "1.4"
features = [
    "v4",
    "fast-rng",
    "serde",
]
