[package]
name = "srcms-data"
version = "0.1.0"
edition = "2021"

[dependencies]

srcms-macros = { path = "../srcms-macros" }

axum = "0.6"

serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

[dependencies.chrono]
version = "0.4"
features = [
    "serde",
]

[dependencies.uuid]
version = "1.6"
features = [
    "v7",
    "fast-rng",
    "serde",
]
