[package]
name = "srcms-server"
version = "0.1.0"
edition = "2021"

[dependencies]

srcms-data = { path = "../srcms-data" }
srcms-macros = { path = "../srcms-macros" }

poem = "1.3.55"
shuttle-poem = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-static-folder = "0.23.0"
shuttle-secrets = "0.23.0"
shuttle-shared-db = { version = "0.23.0", features = ["postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26"
