[package]
name = "srcms-server"
version = "0.1.0"
edition = "2021"

[dependencies]

srcms-data = { path = "../srcms-data" }
srcms-macros = { path = "../srcms-macros" }

poem = { version = "1.3", features = ["static-files", "session"] }
poem-openapi = { version = "3", features = ["swagger-ui"]}

shuttle-poem = "0.31.0"
shuttle-runtime = "0.31.0"
shuttle-secrets = "0.31.0"
shuttle-shared-db = { version = "0.31.0", features = ["postgres"] }

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26"
