[package]
name = "srcms-server"
version = "0.1.0"
edition = "2021"

[dependencies]

srcms-data = { path = "../srcms-data" }
srcms-macros = { path = "../srcms-macros" }
srcms-schema-sqlx = { path = "../srcms-schema-sqlx" }

axum = "0.6"

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "macros"] }
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }

shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-secrets = "0.33.0"
shuttle-shared-db = { version = "0.33.0", features = ["postgres"] }
